[package]
name = "dns-racing"
version = "2.0.1"
edition = "2024"
description = "Race your custom DNS server against public resolvers with live latency stats"
license = "MIT"
repository = "https://github.com/b0x42/dns-racing"

[dependencies]
tokio = { version = "1", features = ["full"] }
hickory-resolver = "0.26"
clap = { version = "4", features = ["derive", "env"] }
chrono = "0.4"
rand = "0.9"
dotenvy = "0.15"

[profile.release]
lto = true
strip = true

[target."cfg(unix)".dependencies]
libc = "0.2.186"
